added database; added docker orchestration

--- a/Backend/src/WoofLodge.Api/appsettings.json
+++ b/Backend/src/WoofLodge.Api/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "WoofLodgeConnection": "Server=(localdb)\\msqllocaldb;Database=WoofLodgeDb;Trusted_Connection=True;"
+    "ConnectionString": "Host=woof_lodge_db;Port=5432;Database=WoofLodge;Username=postgres;Password=admin;Include Error Detail=true"
   }
 }
